add GetServiceByRevision API
