# openapi/index.yaml
@@ -63,10 +63,42 @@ paths:
               service_id: 2b3e728c1a5d1efa035c
               service_name: service
               version: 1
-        "401":
-          description: Unauthorized
         "404":
           description: No service found for the provided ID.
+        "429":
+          description: Too many requests
+  "/services/{service_id}/revision/{version}":
+    get:
+      operationId: getServiceByRevision
+      summary: GetService by a given version
+      description: A previously created service with the provided service ID and version is returned.
+      tags:
+        - restricted
+      parameters:
+        - name: service_id
+          in: path
+          type: string
+          required: true
+          description: The ID of an existing Service.
+        - name: version
+          in: path
+          type: string
+          required: true
+          description: The version of an existing Service.
+      responses:
+        "200":
+          description: Service found.
+          schema:
+            "$ref": "#/definitions/ServicePublic"
+          examples:
+            application/json:
+              department_name: dept
+              organization_name: org
+              service_id: 2b3e728c1a5d1efa035c
+              service_name: service
+              version: 1
+        "404":
+          description: No service found for the provided ID and version.
         "429":
           description: Too many requests
 consumes:
